erDiagram
    UserAccount {
        ObjectId _id PK
        String username
        String email
        String password
        String role
        Boolean isActive
        Date createdAt
    }

    UserProfile {
        ObjectId _id PK "shared with UserAccount._id"
        String country
        String avatar
        Boolean isPremium
        Number walletBalance
    }

    GameSession {
        ObjectId _id PK
        Number sessionNumber
        String gameType
        Number boardSize
        String result
        Date startTime
        Date endTime
        String botName
        String localPlayer2Name
    }

    Move {
        ObjectId _id PK
        String playerId "string token: player1 | player2 | ai"
        String marker
        String position
        Number row
        Number col
        Number moveNumber
        Date createdAt
    }

    GameRoom {
        ObjectId _id PK
        Number roomNumber
        String status
        Number boardSize
        String player1Marker
        String player2Marker
        Date startTime
        Date endTime
    }

    Transaction {
        ObjectId _id PK
        String type
        Number amount
        String status
        String description
        Date createdAt
    }

    Rank {
        ObjectId _id PK
        Number wins
        Number losses
        Number draws
        Number totalGames
        Number winRate
        Date updatedAt
    }

    AuthToken {
        ObjectId _id PK
        String token
        Date expiresAt
        Boolean isRevoked
        Date createdAt
    }

    AdminActionLog {
        ObjectId _id PK
        String actionType
        Object metadata
        Date createdAt
    }

    %% UserAccount and UserProfile share the same _id (1-to-1, security split)
    UserAccount ||--|| UserProfile : "shares _id (profile)"

    UserAccount ||--o{ GameSession : "plays in (players[])"
    UserAccount ||--o{ GameSession : "winner of"
    GameSession ||--o{ Move : "contains"
    UserAccount ||--o{ GameRoom : "player1"
    UserAccount |o--o{ GameRoom : "player2"
    GameRoom ||--o| GameSession : "creates"
    UserAccount ||--o{ Transaction : "owns"
    UserAccount ||--|| Rank : "has"
    UserAccount ||--o{ AuthToken : "has"
    UserAccount ||--o{ AdminActionLog : "performs (adminId)"
    UserAccount |o--o{ AdminActionLog : "target (targetUserId)"
    User ||--o{ GameRoom : "creates (player1)"
    User ||--o{ GameRoom : "joins (player2)"
    GameSession ||--o{ Move : "contains"
    GameSession ||--o| User : "winner"
    GameRoom ||--o| GameSession : "links to"
    AdminActionLog ||--o| GameRoom : "target (targetRoomId)"
